@@ -145,7 +145,8 @@ netsplit <- function(x, upper = TRUE,
                           lower = lowertri(x$lower.fixed),
                           upper = lowertri(x$upper.fixed),
                           z = lowertri(x$zval.fixed),
-                          p = lowertri(x$pval.fixed))
+                          p = lowertri(x$pval.fixed),
+                          stringsAsFactors = FALSE)
   ##
   direct.fixed.low <- data.frame(comparison,
                                  TE = lowertri(TE.direct.fixed),
@@ -153,7 +154,8 @@ netsplit <- function(x, upper = TRUE,
                                  lower = lowertri(lower.direct.fixed),
                                  upper = lowertri(upper.direct.fixed),
                                  z = lowertri(zval.direct.fixed),
-                                 p = lowertri(pval.direct.fixed))
+                                 p = lowertri(pval.direct.fixed),
+                                 stringsAsFactors = FALSE)
   ##
   indirect.fixed.low <- data.frame(comparison,
                                    TE = lowertri(TE.indirect.fixed),
@@ -161,7 +163,8 @@ netsplit <- function(x, upper = TRUE,
                                    lower = lowertri(lower.indirect.fixed),
                                    upper = lowertri(upper.indirect.fixed),
                                    z = lowertri(zval.indirect.fixed),
-                                   p = lowertri(pval.indirect.fixed))
+                                   p = lowertri(pval.indirect.fixed),
+                                   stringsAsFactors = FALSE)
   ##
   fixed.upp <- data.frame(comparison,
                           TE = uppertri(x$TE.fixed),
@@ -169,7 +172,8 @@ netsplit <- function(x, upper = TRUE,
                           lower = uppertri(x$lower.fixed),
                           upper = uppertri(x$upper.fixed),
                           z = uppertri(x$zval.fixed),
-                          p = uppertri(x$pval.fixed))
+                          p = uppertri(x$pval.fixed),
+                          stringsAsFactors = FALSE)
   ##
   direct.fixed.upp <- data.frame(comparison,
                                  TE = uppertri(TE.direct.fixed),
@@ -177,7 +181,8 @@ netsplit <- function(x, upper = TRUE,
                                  lower = uppertri(lower.direct.fixed),
                                  upper = uppertri(upper.direct.fixed),
                                  z = uppertri(zval.direct.fixed),
-                                 p = uppertri(pval.direct.fixed))
+                                 p = uppertri(pval.direct.fixed),
+                                 stringsAsFactors = FALSE)
   ##
   indirect.fixed.upp <- data.frame(comparison,
                                    TE = uppertri(TE.indirect.fixed),
@@ -185,7 +190,8 @@ netsplit <- function(x, upper = TRUE,
                                    lower = uppertri(lower.indirect.fixed),
                                    upper = uppertri(upper.indirect.fixed),
                                    z = uppertri(zval.indirect.fixed),
-                                   p = uppertri(pval.indirect.fixed))
+                                   p = uppertri(pval.indirect.fixed),
+                                   stringsAsFactors = FALSE)
   ##
   if (!upper) {
     fixed <- fixed.low
@@ -220,7 +226,8 @@ netsplit <- function(x, upper = TRUE,
                               lower = m.fixed$lower,
                               upper = m.fixed$upper,
                               z = m.fixed$zval,
-                              p = m.fixed$pval)
+                              p = m.fixed$pval,
+                              stringsAsFactors = FALSE)
   
   
   ##
@@ -232,7 +239,8 @@ netsplit <- function(x, upper = TRUE,
                            lower = lowertri(x$lower.random),
                            upper = lowertri(x$upper.random),
                            z = lowertri(x$zval.random),
-                           p = lowertri(x$pval.random))
+                           p = lowertri(x$pval.random),
+                           stringsAsFactors = FALSE)
   ##
   direct.random.low <- data.frame(comparison,
                                   TE = lowertri(TE.direct.random),
@@ -240,7 +248,8 @@ netsplit <- function(x, upper = TRUE,
                                   lower = lowertri(lower.direct.random),
                                   upper = lowertri(upper.direct.random),
                                   z = lowertri(zval.direct.random),
-                                  p = lowertri(pval.direct.random))
+                                  p = lowertri(pval.direct.random),
+                                  stringsAsFactors = FALSE)
   ##
   indirect.random.low <- data.frame(comparison,
                                     TE = lowertri(TE.indirect.random),
@@ -248,11 +257,13 @@ netsplit <- function(x, upper = TRUE,
                                     lower = lowertri(lower.indirect.random),
                                     upper = lowertri(upper.indirect.random),
                                     z = lowertri(zval.indirect.random),
-                                    p = lowertri(pval.indirect.random))
+                                    p = lowertri(pval.indirect.random),
+                                    stringsAsFactors = FALSE)
   ##
   predict.low <- data.frame(comparison,
                             lower = lowertri(x$lower.predict),
-                            upper = lowertri(x$upper.predict))
+                            upper = lowertri(x$upper.predict),
+                            stringsAsFactors = FALSE)
   ##
   random.upp <- data.frame(comparison,
                            TE = uppertri(x$TE.random),
@@ -260,7 +271,8 @@ netsplit <- function(x, upper = TRUE,
                            lower = uppertri(x$lower.random),
                            upper = uppertri(x$upper.random),
                            z = uppertri(x$zval.random),
-                           p = uppertri(x$pval.random))
+                           p = uppertri(x$pval.random),
+                           stringsAsFactors = FALSE)
   ##
   direct.random.upp <- data.frame(comparison,
                                   TE = uppertri(TE.direct.random),
@@ -268,7 +280,8 @@ netsplit <- function(x, upper = TRUE,
                                   lower = uppertri(lower.direct.random),
                                   upper = uppertri(upper.direct.random),
                                   z = uppertri(zval.direct.random),
-                                  p = uppertri(pval.direct.random))
+                                  p = uppertri(pval.direct.random),
+                                  stringsAsFactors = FALSE)
   ##
   indirect.random.upp <- data.frame(comparison,
                                     TE = uppertri(TE.indirect.random),
@@ -276,11 +289,13 @@ netsplit <- function(x, upper = TRUE,
                                     lower = uppertri(lower.indirect.random),
                                     upper = uppertri(upper.indirect.random),
                                     z = uppertri(zval.indirect.random),
-                                    p = uppertri(pval.indirect.random))
+                                    p = uppertri(pval.indirect.random),
+                                    stringsAsFactors = FALSE)
   ##
   predict.upp <- data.frame(comparison,
                             lower = uppertri(x$lower.predict),
-                            upper = uppertri(x$upper.predict))
+                            upper = uppertri(x$upper.predict),
+                            stringsAsFactors = FALSE)
   ##
   if (!upper) {
     random <- random.low
@@ -319,7 +334,8 @@ netsplit <- function(x, upper = TRUE,
                                lower = m.random$lower,
                                upper = m.random$upper,
                                z = m.random$zval,
-                               p = m.random$pval)
+                               p = m.random$pval,
+                               stringsAsFactors = FALSE)
   
   
   res <- list(comparison = comparison,
